# RazorClaw

./: .env.example  .gitignore  NOTES.md  README.md  api_server.py  chat.py  ecosystem.config.js  feishu-bot.js  main.py  package-lock.json  package.json  pyproject.toml
docs/architecture/: pi-mono-架构分析.md  poiclaw-vs-pi-mono-对比分析.md  poiclaw-架构分析.md
eval/: run_eval.py
eval/results/: eval_20260324_103826.json  eval_20260324_103919.json  eval_20260324_104039.json  eval_20260324_104724.json  eval_20260324_104922.json
examples/: feishu_server.py
skills/: commit.md  review-pr.md  test-runner.md
src/poiclaw/: __init__.py
src/poiclaw/core/: __init__.py  agent.py  compaction.py  events.py  hooks.py  session.py  session_migration.py  session_tree.py  system_prompt.py  tools.py
src/poiclaw/extensions/: __init__.py  base.py  manager.py  sandbox.py
src/poiclaw/llm/: __init__.py  client.py  exceptions.py  stream.py  types.py
src/poiclaw/sandbox/: __init__.py  docker_manager.py
src/poiclaw/server/: __init__.py  feishu.py
src/poiclaw/skills/: __init__.py  loader.py  models.py  registry.py
src/poiclaw/tools/: __init__.py  bash.py  edit_file.py  list_tools.py  read_file.py  read_skill.py  subagent.py  write_file.py
tests/: README.md  test_compaction.py  test_compaction_tokens.py  test_core.py  test_docker_sandbox.py  test_events.py  test_llm.py  test_progressive_tokens.py  test_session.py  test_session_tree.py  test_skills_tokens.py  test_subagent_parallel.py  test_system_prompt_tokens.py  test_tools.py
