[project]
name = "poiclaw"
version = "0.1.0"
description = "A minimal Agent framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.scripts]
poiclaw = "poiclaw:main"

[tool.hatch.build.targets.wheel]
packages = ["src/poiclaw"]

[tool.uv]
package = true
