[project]
name = "poiclaw"
version = "0.1.0"
description = "A minimal Agent framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "lark-oapi>=1.0.0",
]

[project.scripts]
poiclaw = "poiclaw:main"

[tool.hatch.build.targets.wheel]
packages = ["src/poiclaw"]

[tool.uv]
package = true
